[project]
name = "autoresearch-adult-income"
version = "0.1.0"
description = "Minimal AutoResearch-style benchmark harness for Adult Income."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.0",
    "openml>=0.15.1",
    "pandas>=2.2.3",
    "pyarrow>=18.1.0",
    "scikit-learn>=1.6.0",
]
